--- a/wormbase.conf
+++ b/wormbase.conf
@@ -51,6 +51,11 @@ facebook_app_id      = 145770318837275
 twitter_consumer_key = dORNthy42qJmltFfBEplQ
 twitter_consumer_secret  = ZT89nA5lmc3hGSre14dHSGCcciEPFpOWwCabaM8VUE
 
+# Datomic
+
+datomic_url = "http://localhost:4664/api/query"
+datomic_db_alias = "ace/wb247-imp1"
+
 # This is the site-wide (dismissable) system message.
 # The id is used to make sure a new message won't be hidden
 <system_message>
